applier/build/5pi-home.jsonnet.test-args/home_automation/zwave2mqtt/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "zwave2mqtt"
  "namespace": "home-automation"
"spec":
  "ports":
  - "port": 8091
  "selector":
    "app": "zwave2mqtt"
