applier/build/5pi-home.jsonnet.test-args/home_automation/zwave2mqtt/all.yaml
"apiVersion": "v1"
"items":
- "apiVersion": "v1"
  "kind": "Namespace"
  "metadata":
    "name": "home-automation"
- "apiVersion": "apps/v1"
  "kind": "Deployment"
  "metadata":
    "labels":
      "app": "zwave2mqtt"
    "name": "zwave2mqtt"
    "namespace": "home-automation"
  "spec":
    "replicas": 1
    "selector":
      "matchLabels":
        "app": "zwave2mqtt"
    "template":
      "metadata":
        "labels":
          "app": "zwave2mqtt"
      "spec":
        "containers":
        - "image": "robertslando/zwave2mqtt:latest"
          "name": "zwave2mqtt"
          "securityContext":
            "privileged": true
          "volumeMounts":
          - "mountPath": "/dev/ttyACM-zwave"
            "name": "dev"
            "readOnly": false
            "subPath": "ttyACM0"
          - "mountPath": "/usr/src/app/store"
            "name": "data"
        "nodeSelector":
          "kubernetes.io/hostname": "rpi-living"
        "volumes":
        - "hostPath":
            "path": "/dev"
          "name": "dev"
        - "hostPath":
            "path": "/data/zwave2mqtt"
          "name": "data"
- "apiVersion": "v1"
  "kind": "Service"
  "metadata":
    "name": "zwave2mqtt"
    "namespace": "home-automation"
  "spec":
    "ports":
    - "port": 8091
    "selector":
      "app": "zwave2mqtt"
- "apiVersion": "extensions/v1beta1"
  "kind": "Ingress"
  "metadata":
    "name": "zwave2mqtt"
    "namespace": "home-automation"
  "spec":
    "rules":
    - "host": "zwave.d.42o.de"
      "http":
        "paths":
        - "backend":
            "serviceName": "zwave2mqtt"
            "servicePort": 8091
          "path": "/"
"kind": "List"
