applier/build/5pi-home.jsonnet.test-args/home_automation/zwave2mqtt/ingress.yaml
"apiVersion": "extensions/v1beta1"
"kind": "Ingress"
"metadata":
  "name": "zwave2mqtt"
  "namespace": "home-automation"
"spec":
  "rules":
  - "host": "zwave.d.42o.de"
    "http":
      "paths":
      - "backend":
          "serviceName": "zwave2mqtt"
          "servicePort": 8091
        "path": "/"
